RESOLVED FIXED105612
Maybe a typo error in the comments in PlatformContextSkia.h
https://bugs.webkit.org/show_bug.cgi?id=105612
Summary Maybe a typo error in the comments in PlatformContextSkia.h
Qiankun Miao
Reported 2012-12-20 21:04:03 PST
Maybe a typo error in the comments in PlatformContextSkia.h
Attachments
Patch (1.71 KB, patch)
2012-12-20 21:11 PST, Qiankun Miao
no flags
Patch (1.80 KB, patch)
2012-12-21 16:48 PST, Qiankun Miao
no flags
Patch (1.80 KB, patch)
2013-01-09 17:38 PST, Qiankun Miao
no flags
Patch (1.80 KB, patch)
2013-01-09 18:10 PST, Qiankun Miao
no flags
Patch (1.80 KB, patch)
2013-01-09 18:12 PST, Qiankun Miao
no flags
Qiankun Miao
Comment 1 2012-12-20 21:11:56 PST
Justin Novosad
Comment 2 2012-12-21 10:16:03 PST
Isn't it the other "false" that should be changed to "true"?
Qiankun Miao
Comment 3 2012-12-21 16:48:58 PST
Qiankun Miao
Comment 4 2012-12-21 16:53:35 PST
(In reply to comment #2) > Isn't it the other "false" that should be changed to "true"? Yes. If true, we are rendering to an ImageBuffer which has a canvas object. Updated the patch, please help to review, thanks.
WebKit Review Bot
Comment 5 2012-12-27 07:26:08 PST
Comment on attachment 180576 [details] Patch Rejecting attachment 180576 [details] from commit-queue. qiankun.miao@intel.com does not have committer permissions according to http://trac.webkit.org/browser/trunk/Tools/Scripts/webkitpy/common/config/committers.py. - If you do not have committer rights please read http://webkit.org/coding/contributing.html for instructions on how to use bugzilla flags. - If you have committer rights please correct the error in Tools/Scripts/webkitpy/common/config/committers.py by adding yourself to the file (no review needed). The commit-queue restarts itself every 2 hours. After restart the commit-queue will correctly respect your committer rights.
Stephen White
Comment 6 2013-01-09 14:02:30 PST
Comment on attachment 180576 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=180576&action=review > Source/WebCore/ChangeLog:6 > + Reviewed by Justin Novosad. Please change this line back to "Reviewed by NOBODY (OOPS!)". The commit tools will change it on landing to reflect the actual reviewer. (See "Changelog files" on http://www.webkit.org/coding/contributing.html).
Qiankun Miao
Comment 7 2013-01-09 17:38:57 PST
Qiankun Miao
Comment 8 2013-01-09 18:10:31 PST
Qiankun Miao
Comment 9 2013-01-09 18:12:51 PST
Stephen White
Comment 10 2013-01-10 06:47:28 PST
Comment on attachment 182041 [details] Patch OK, thanks. r=me
WebKit Review Bot
Comment 11 2013-01-14 01:24:56 PST
Comment on attachment 182041 [details] Patch Clearing flags on attachment: 182041 Committed r139591: <http://trac.webkit.org/changeset/139591>
WebKit Review Bot
Comment 12 2013-01-14 01:25:00 PST
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.